feat(startup): Set up Timber, StrictMode, and WorkManager initializers

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,21 +24,47 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".SanctumApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Sanctum"
         tools:targetApi="31">
+
         <activity
-            android:name="com.harry.sanctum.MainActivity"
+            android:name="com.harry.sanctum.ui.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.Sanctum">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            android:exported="false"
+            tools:node="merge">
+
+            <meta-data
+                android:name="androidx.work.WorkManagerInitializer"
+                android:value="androidx.startup"
+                tools:node="remove" />
+
+            <meta-data
+                android:name="com.harry.sanctum.initializers.StrictModeInitializer"
+                android:value="androidx.startup" />
+
+            <meta-data
+                android:name="com.harry.sanctum.initializers.TimberInitializer"
+                android:value="androidx.startup" />
+
+            <meta-data
+                android:name="com.harry.sanctum.initializers.WorkManagerInitializer"
+                android:value="androidx.startup" />
+
+        </provider>
+
     </application>
 
 </manifest>
