chore(network): Change backend url

--- a/secrets.properties
+++ b/secrets.properties
@@ -1,2 +1,2 @@
 # Uses dev URL by default. CI will change the value to prod URL during the release.
-BACKEND_URL="https://sanctum-journal-dev-default-rtdb.asia-southeast1.firebasedatabase.app/"
+BACKEND_URL="https://firestore.googleapis.com/v1/projects/sanctum-dev/databases/(default)/documents"
