--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,30 +2,29 @@
 accompanist = "0.37.0"
 androidDesugarJdkLibs = "2.1.5"
 androidGradlePlugin = "8.9.1"
-androidTools = "31.9.0"
+androidTools = "31.9.1"
 androidxActivity = "1.10.1"
 androidxAppCompat = "1.7.0"
 androidxBrowser = "1.8.0"
-androidxComposeBom = "2025.03.00"
-androidxComposeFoundation = "1.8.0-rc01"
+androidxComposeBom = "2025.04.00"
+androidxComposeFoundation = "1.8.0-rc03"
 androidxComposeRuntimeTracing = "1.7.8"
-androidxCore = "1.15.0"
+androidxCore = "1.16.0"
 androidxCoreSplashscreen = "1.0.1"
-androidxDataStore = "1.1.3"
 androidxEspresso = "3.6.1"
 androidxHiltNavigationCompose = "1.2.0"
 androidxLifecycle = "2.8.7"
 androidxLintGradle = "1.0.0-alpha03"
-androidxMacroBenchmark = "1.3.3"
+androidxMacroBenchmark = "1.3.4"
 androidxMetrics = "1.0.0-beta02"
 androidxNavigation = "2.8.9"
 androidxProfileinstaller = "1.4.1"
-androidxSecurityCrypto = "1.1.0-alpha06"
+androidxSecurityCrypto = "1.1.0-alpha07"
 androidxTestCore = "1.6.1"
 androidxTestExt = "1.2.1"
 androidxTestRules = "1.6.1"
 androidxTestRunner = "1.6.2"
-androidxTracing = "1.3.0-beta01"
+androidxTracing = "1.3.0-rc01"
 androidxUiAutomator = "2.3.0"
 androidxWindowManager = "1.3.0"
 androidxWork = "2.10.0"
@@ -34,7 +33,7 @@ dependencyGuard = "0.5.0"
 gmsPlugin = "4.4.2"
 googleOss = "17.1.0"
 googleOssPlugin = "0.10.6"
-firebaseBom = "33.11.0"
+firebaseBom = "33.12.0"
 hilt = "2.56.1"
 hiltExt = "1.2.0"
 jacoco = "0.8.12"
@@ -52,7 +51,7 @@ retrofit = "2.11.0"
 retrofitKotlinxSerializationJson = "1.0.0"
 robolectric = "4.14.1"
 roborazzi = "1.39.0"
-room = "2.6.1"
+room = "2.7.0"
 timber = "5.0.1"
 truth = "1.4.4"
 turbine = "1.2.0"
@@ -86,8 +85,6 @@ androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "u
 androidx-compose-ui-util = { group = "androidx.compose.ui", name = "ui-util" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "androidxCore" }
 androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "androidxCoreSplashscreen" }
-androidx-dataStore = { group = "androidx.datastore", name = "datastore", version.ref = "androidxDataStore" }
-androidx-dataStore-core = { group = "androidx.datastore", name = "datastore-core", version.ref = "androidxDataStore" }
 androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "androidxHiltNavigationCompose" }
 androidx-lifecycle-runtimeCompose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "androidxLifecycle" }
 androidx-lifecycle-runtimeTesting = { group = "androidx.lifecycle", name = "lifecycle-runtime-testing", version.ref = "androidxLifecycle" }
@@ -159,7 +156,6 @@ room-gradlePlugin = { group = "androidx.room", name = "room-gradle-plugin", vers
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 android-library = { id = "com.android.library", version.ref = "androidGradlePlugin" }
-android-lint = { id = "com.android.lint", version.ref = "androidGradlePlugin" }
 android-test = { id = "com.android.test", version.ref = "androidGradlePlugin" }
 baselineprofile = { id = "androidx.baselineprofile", version.ref = "androidxMacroBenchmark"}
 compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
