--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,20 +1,20 @@
 [versions]
 accompanist = "0.37.0"
 androidDesugarJdkLibs = "2.1.5"
-androidGradlePlugin = "8.9.1"
-androidTools = "31.9.1"
+androidGradlePlugin = "8.9.2"
+androidTools = "31.9.2"
 androidxActivity = "1.10.1"
 androidxAppCompat = "1.7.0"
 androidxBrowser = "1.8.0"
-androidxComposeBom = "2025.04.00"
-androidxComposeFoundation = "1.8.0-rc03"
-androidxComposeRuntimeTracing = "1.7.8"
+androidxComposeBom = "2025.04.01"
+androidxComposeFoundation = "1.8.0"
+androidxComposeRuntimeTracing = "1.8.0"
 androidxCore = "1.16.0"
 androidxCoreSplashscreen = "1.0.1"
 androidxEspresso = "3.6.1"
 androidxHiltNavigationCompose = "1.2.0"
 androidxLifecycle = "2.8.7"
-androidxLintGradle = "1.0.0-alpha03"
+androidxLintGradle = "1.0.0-alpha04"
 androidxMacroBenchmark = "1.3.4"
 androidxMetrics = "1.0.0-beta02"
 androidxNavigation = "2.8.9"
@@ -24,10 +24,10 @@ androidxTestCore = "1.6.1"
 androidxTestExt = "1.2.1"
 androidxTestRules = "1.6.1"
 androidxTestRunner = "1.6.2"
-androidxTracing = "1.3.0-rc01"
+androidxTracing = "1.3.0"
 androidxUiAutomator = "2.3.0"
 androidxWindowManager = "1.3.0"
-androidxWork = "2.10.0"
+androidxWork = "2.10.1"
 coil = "2.7.0"
 dependencyGuard = "0.5.0"
 gmsPlugin = "4.4.2"
@@ -51,7 +51,7 @@ retrofit = "2.11.0"
 retrofitKotlinxSerializationJson = "1.0.0"
 robolectric = "4.14.1"
 roborazzi = "1.39.0"
-room = "2.7.0"
+room = "2.7.1"
 timber = "5.0.1"
 truth = "1.4.4"
 turbine = "1.2.0"
