--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,60 +1,60 @@
 [versions]
-accompanist = "0.37.0"
+accompanist = "0.37.3"
 androidDesugarJdkLibs = "2.1.5"
 androidGradlePlugin = "8.11.1"
-androidTools = "31.9.2"
+androidTools = "31.12.0"
 androidxActivity = "1.10.1"
-androidxAppCompat = "1.7.0"
-androidxBrowser = "1.8.0"
-androidxComposeBom = "2025.04.01"
-androidxComposeFoundation = "1.8.0"
-androidxComposeRuntimeTracing = "1.8.0"
-androidxCore = "1.16.0"
+androidxAppCompat = "1.7.1"
+androidxBrowser = "1.9.0"
+androidxComposeBom = "2025.08.00"
+androidxComposeFoundation = "1.9.0"
+androidxComposeRuntimeTracing = "1.9.0"
+androidxCore = "1.17.0"
 androidxCoreSplashscreen = "1.0.1"
-androidxEspresso = "3.6.1"
+androidxEspresso = "3.7.0"
 androidxHiltNavigationCompose = "1.2.0"
-androidxLifecycle = "2.8.7"
-androidxMacroBenchmark = "1.3.4"
+androidxLifecycle = "2.9.2"
+androidxMacroBenchmark = "1.4.0"
 androidxMetrics = "1.0.0-beta02"
-androidxNavigation = "2.8.9"
+androidxNavigation = "2.9.3"
 androidxProfileinstaller = "1.4.1"
-androidxSecurityCrypto = "1.1.0-alpha07"
-androidxTestCore = "1.6.1"
-androidxTestExt = "1.2.1"
-androidxTestRules = "1.6.1"
-androidxTestRunner = "1.6.2"
+androidxSecurityCrypto = "1.1.0"
+androidxTestCore = "1.7.0"
+androidxTestExt = "1.3.0"
+androidxTestRules = "1.7.0"
+androidxTestRunner = "1.7.0"
 androidxTracing = "1.3.0"
 androidxUiAutomator = "2.3.0"
-androidxWindowManager = "1.3.0"
-androidxWork = "2.10.1"
+androidxWindowManager = "1.4.0"
+androidxWork = "2.10.3"
 coil = "2.7.0"
 dependencyGuard = "0.5.0"
-gmsPlugin = "4.4.2"
-googleCryptoTink = "1.11.0"
-googleOss = "17.1.0"
-googleOssPlugin = "0.10.6"
-firebaseBom = "33.12.0"
-hilt = "2.56.1"
+gmsPlugin = "4.4.3"
+googleCryptoTink = "1.18.0"
+googleOss = "17.2.2"
+googleOssPlugin = "0.10.7"
+firebaseBom = "34.1.0"
+hilt = "2.57"
 hiltExt = "1.2.0"
 jacoco = "0.8.12"
 junit4 = "4.13.2"
-kotlin = "2.1.0"
-kotlinxCoroutines = "1.10.1"
+kotlin = "2.2.10"
+kotlinxCoroutines = "1.10.2"
 kotlinxDatetime = "0.6.1"
-kotlinxSerializationJson = "1.8.0"
-ksp = "2.1.0-1.0.29"
-moduleGraph = "2.7.1"
-okhttp = "4.12.0"
-protobuf = "4.29.2"
-protobufPlugin = "0.9.4"
-retrofit = "2.11.0"
+kotlinxSerializationJson = "1.9.0"
+ksp = "2.2.10-2.0.2"
+moduleGraph = "2.9.0"
+okhttp = "5.1.0"
+protobuf = "4.32.0"
+protobufPlugin = "0.9.5"
+retrofit = "3.0.0"
 retrofitKotlinxSerializationJson = "1.0.0"
-robolectric = "4.14.1"
-roborazzi = "1.39.0"
-room = "2.7.1"
+robolectric = "4.15.1"
+roborazzi = "1.48.0"
+room = "2.7.2"
 timber = "5.0.1"
 truth = "1.4.4"
-turbine = "1.2.0"
+turbine = "1.2.1"
 
 [bundles]
 androidx-compose-ui-test = ["androidx-compose-ui-test", "androidx-compose-ui-testManifest"]
