--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,7 +18,6 @@ androidxMacroBenchmark = "1.4.0"
 androidxMetrics = "1.0.0-beta02"
 androidxNavigation = "2.9.3"
 androidxProfileinstaller = "1.4.1"
-androidxSecurityCrypto = "1.1.0"
 androidxTestCore = "1.7.0"
 androidxTestExt = "1.3.0"
 androidxTestRules = "1.7.0"
@@ -52,6 +51,7 @@ retrofitKotlinxSerializationJson = "1.0.0"
 robolectric = "4.15.1"
 roborazzi = "1.48.0"
 room = "2.7.2"
+safebox = "1.1.0"
 timber = "5.0.1"
 truth = "1.4.4"
 turbine = "1.2.1"
@@ -93,7 +93,6 @@ androidx-metrics = { group = "androidx.metrics", name = "metrics-performance", v
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidxNavigation" }
 androidx-navigation-testing = { group = "androidx.navigation", name = "navigation-testing", version.ref = "androidxNavigation" }
 androidx-profileinstaller = { group = "androidx.profileinstaller", name = "profileinstaller", version.ref = "androidxProfileinstaller" }
-androidx-security-crypto = { group = "androidx.security", name = "security-crypto-ktx", version.ref = "androidxSecurityCrypto" }
 androidx-test-core = { group = "androidx.test", name = "core", version.ref = "androidxTestCore" }
 androidx-test-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidxEspresso" }
 androidx-test-ext = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "androidxTestExt" }
@@ -138,6 +137,7 @@ roborazzi-accessibility-check = { group = "io.github.takahirom.roborazzi", name 
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+safebox = { group = "io.github.harrytmthy", name = "safebox", version.ref = "safebox" }
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
 turbine = { group = "app.cash.turbine", name = "turbine", version.ref = "turbine" }
 
