--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -51,7 +51,7 @@ retrofitKotlinxSerializationJson = "1.0.0"
 robolectric = "4.16"
 roborazzi = "1.50.0"
 room = "2.8.1"
-safebox = "1.2.0"
+safebox = "1.3.0-alpha01"
 timber = "5.0.1"
 truth = "1.4.4"
 turbine = "1.2.1"
